@@ -20,20 +20,18 @@ package org.apache.giraph.graph.partition;
 
 import org.apache.giraph.GiraphConfiguration;
 import org.apache.giraph.ImmutableClassesGiraphConfiguration;
-import org.apache.giraph.graph.GiraphJob;
 import org.apache.giraph.graph.IntIntNullIntVertex;
 import org.apache.giraph.graph.Vertex;
-import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.io.IntWritable;
 import org.apache.hadoop.io.NullWritable;
-import org.apache.hadoop.io.Writable;
-import org.apache.hadoop.io.WritableComparable;
+import org.apache.hadoop.mapreduce.Mapper;
 import org.junit.Before;
 import org.junit.Test;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
+import static org.mockito.Mockito.mock;
 
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
@@ -45,6 +43,7 @@ import java.io.IOException;
  */
 public class TestPartitionStores {
   private ImmutableClassesGiraphConfiguration conf;
+  private Mapper<?, ?, ?, ?>.Context context;
 
   public static class MyVertex extends IntIntNullIntVertex {
     @Override
@@ -58,7 +57,7 @@ public class TestPartitionStores {
                                        NullWritable, IntWritable>... vertices) {
     Partition<IntWritable, IntWritable, NullWritable, IntWritable> partition =
         new Partition<IntWritable, IntWritable, NullWritable,
-            IntWritable>(conf, id);
+            IntWritable>(conf, id, context);
     for (Vertex<IntWritable, IntWritable, NullWritable, IntWritable> v :
         vertices) {
       partition.putVertex(v);
@@ -71,13 +70,14 @@ public class TestPartitionStores {
     GiraphConfiguration configuration = new GiraphConfiguration();
     configuration.setVertexClass(MyVertex.class);
     conf = new ImmutableClassesGiraphConfiguration(configuration);
+    context = mock(Mapper.Context.class);
   }
 
   @Test
   public void testSimplePartitionStore() {
     PartitionStore<IntWritable, IntWritable, NullWritable, IntWritable>
         partitionStore = new SimplePartitionStore<IntWritable, IntWritable,
-        NullWritable, IntWritable>(conf);
+        NullWritable, IntWritable>(conf, context);
     testReadWrite(partitionStore, conf);
   }
 
@@ -88,12 +88,12 @@ public class TestPartitionStores {
 
     PartitionStore<IntWritable, IntWritable, NullWritable, IntWritable>
         partitionStore = new DiskBackedPartitionStore<IntWritable,
-                IntWritable, NullWritable, IntWritable>(conf);
+                IntWritable, NullWritable, IntWritable>(conf, context);
     testReadWrite(partitionStore, conf);
 
     conf.setInt(GiraphConfiguration.MAX_PARTITIONS_IN_MEMORY, 2);
     partitionStore = new DiskBackedPartitionStore<IntWritable,
-            IntWritable, NullWritable, IntWritable>(conf);
+            IntWritable, NullWritable, IntWritable>(conf, context);
     testReadWrite(partitionStore, conf);
   }
 
